[package]
name = "meda"
version = "0.1.0"
authors = ["Zach <zachrwolfe@me.com>"]
edition = "2018"

[profile.release]
debug = true
lto = true

[dependencies]
unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation" }
string-interner = "0.7.0"
smallvec = "0.6.10"
arrayvec = "0.4.11"
crossbeam-utils = "0.6.6"