[package]
name = "meda"
version = "0.1.0"
authors = ["Zach <zachrwolfe@me.com>"]
edition = "2018"

[profile.release]
debug = true
lto = true

[dependencies]
serde = "1.0.103"
unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation" }
string-interner = "0.12.1"
bitflags = "1.2.1"
smallvec = "1.5.1"
arrayvec = "0.5.2"
webbrowser = "0.5.2"
clap = "3.0.0-beta.1"
paste = "1.0.0"
num-bigint = "0.3"
index_vec = "0.1.2"
mire = { path = "../mire/" }