[package]
name = "dusk_dire"
version = "0.1.1"
authors = ["Zach Wolfe <zachrwolfe@me.com>"]
edition = "2021"
description = "A work-in-progress intermediate representation library, designed primarily for use in the Dusk programming language"
license = "MIT"
repository = "https://github.com/dusklang/dusk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
index_vec = "0.1.2"
smallvec = "1.5.1"
string-interner = "0.12.1"
display_adapter = { version = "0.1", path = "../../display_adapter/display_adapter" }
num-bigint = "0.3"