[package]
name = "dls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdusk = { path = "../libdusk" }
dire = { path = "../dire" }
dusk-proc-macros = { path = "../dusk-proc-macros" }
lsp-server = "0.6"
lsp-types = "0.93"
serde_json = "1.0"
serde = "1.0"