[package]
name = "dls"
version = "0.1.4"
edition = "2021"
homepage = "https://dusklang.org/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdusk = { version = "0.1", path = "../libdusk", features = ["dls"] }
dusk_dire = { version = "0.1", path = "../dire" }
dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
lsp-server = "0.6"
lsp-types = "0.93"
serde_json = "1.0"
serde = "1.0"