[package]
name = "dls"
version = "0.1.6"
edition = "2021"
homepage = "https://dusklang.org/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdusk = { version = "0.1", path = "../libdusk", features = ["dls"] }
dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1.0"
serde = "1.0"