[package]
name = "dusklang"
version = "0.1.5"
authors = ["Zach <zachrwolfe@me.com>"]
edition = "2021"
default-run = "dusk"
description = "This crate contains a compiler for the Dusk programming language"
license = "MIT"
repository = "https://github.com/dusklang/dusk"
homepage = "https://dusklang.org/"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
libdusk = { version = "0.1", path = "../libdusk" }
dusk_dire = { version = "0.1", path = "../dire" }

# DVD-specific dependencies
glium = { version = "0.30.2", default-features = true, optional = true }
imgui = { version = "0.8.2", features = ["tables-api"], optional = true }
rand = { version = "0.8", optional = true }
imgui-winit-support = { version = "0.8.2", optional = true }
interprocess = { version = "1.1.1", optional = true }
imgui-glium-renderer = { version = "0.8.2", optional = true }

# Should compile away to nothing when the "dvd" feature below is not enabled
dvd_ipc = { version = "0.1", path = "../dvd_ipc" }

[features]
# Enables the Dusk visual debugger
dvd = ["libdusk/dvd", "dvd_ipc/enabled", "dep:glium", "dep:imgui", "dep:rand", "dep:imgui-winit-support", "dep:interprocess", "dep:imgui-glium-renderer"]

[[bin]]
path = "src/main.rs"
name = "dusk"