[package]
name = "dusklang"
version = "0.1.6"
authors = ["Zach <zachrwolfe@me.com>"]
edition = "2021"
default-run = "dusk"
description = "This crate contains a compiler for the Dusk programming language"
license = "MIT"
repository = "https://github.com/dusklang/dusk"
homepage = "https://dusklang.org/"
readme = "../README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libdusk = { version = "0.1", path = "../libdusk" }

[[bin]]
path = "src/main.rs"
name = "dusk"