[package]
name = "dvd_ipc"
version = "0.1.5"
authors = ["Zach <zachrwolfe@me.com>"]
description = "This crate implements the IPC protocol used between the Dusk compiler and the Dusk Visual Debugger (DVD)."
edition = "2021"
license = "MIT"
repository = "https://github.com/dusklang/dusk/"
homepage = "https://dusklang.org/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = { version = "1.1.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

dusk_dire = { version = "0.1", path = "../dire" }

[features]
enabled = ["dep:interprocess", "dep:lazy_static", "dep:serde", "dep:serde_json", "dusk_dire/serde"]