[package]
name = "libdusk"
version = "0.1.5"
authors = ["Zach <zachrwolfe@me.com>"]
edition = "2021"
description = "This crate implements most of the compiler for the Dusk programming language, in library form."
license = "MIT"
repository = "https://github.com/dusklang/dusk/"
homepage = "https://dusklang.org/"

[dependencies]
unicode-segmentation = "1.9"
string-interner = "0.12.1"
bitflags = "1.2.1"
smallvec = { version = "1.6.1", features = ["const_generics"] }
arrayvec = "0.7.0"
clap = { version = "3.0", features = ["derive"] }
paste = "1.0.0"
num-bigint = "0.3"
index_vec = { version = "0.1.2" }
indenter = "0.3.2"
region = "3.0"
display_adapter = { version = "0.1", path = "../../display_adapter/display_adapter" }
dusk_dire = { version = "0.1", path = "../dire" }
dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
lazy_static = "1.4.0"

# LSP-related dependencies
lsp-types = { version = "0.93", optional = true }

# DVD-related dependencies
dvd_ipc = { version = "0.1", path = "../dvd_ipc" }
serde = { version = "1.0", optional = true }

# Instrumentation-related dependencies
tracing = { version = "0.1" }

[features]
dls = ["dep:lsp-types"]
dvd = ["dvd_ipc/enabled", "dep:serde", "index_vec/serde"]
instrumentation = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"