[package]
name = "libdusk"
version = "0.1.6"
authors = ["Zach <zachrwolfe@me.com>"]
edition = "2021"
description = "This crate implements most of the compiler for the Dusk programming language, in library form."
license = "MIT"
repository = "https://github.com/dusklang/dusk/"
homepage = "https://dusklang.org/"

[dependencies]
unicode-segmentation = "1.9"
string-interner = "0.15"
bitflags = "2.4"
smallvec = { version = "1.6.1", features = ["const_generics"] }
arrayvec = "0.7.0"
paste = "1.0.0"
num-bigint = "0.4"
index_vec = { version = "0.1.2" }
indenter = "0.3.2"
region = "3.0"
dusk-proc-macros = { version = "0.1", path = "../dusk-proc-macros" }
lazy_static = "1.4.0"
derivative = "2.2"
md-5 = "0.10.0"
sha2 = "0.10.8"
yaml-rust = "0.4.5"
sha1 = "0.10"

# LSP-related dependencies
lsp-types = { version = "0.95", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
dls = ["dep:lsp-types"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }

[target.'cfg(not(windows))'.dependencies]
# This version is only locked in order to fix a clash with another crate which also depends on libc.
libc = "=0.2"
